# VoxelEngine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Ucraft.sln
Libraries/libcurl/lib/: libcurl.dylib
Libraries/libwebsockets/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  LibwebsocketsConfig.cmake  LibwebsocketsTargets.cmake  build.ninja  libwebsockets-test-server.key.pem  libwebsockets-test-server.pem  lws_config.h  rules.ninja
Libraries/libwebsockets/lib/: websockets.exp  websockets.lib  websockets_static.lib
Libraries/libwebsockets/lib/roles/raw-skt/: ops-raw-skt.c
Libraries/libwebsockets/minimal-examples/api-tests/api-test-jose/: CMakeLists.txt
Libraries/libwebsockets/win32port/: version.rc
Ressources/: No_texture.frag  theme.json
release/Ressources/: Debug.frag  Debug.vert  No_texture.vert  simple.frag  simple.vert
release/linux/: Ucraft
uSrc/Includes/: AABBBox.h  Cube.h  CubeFactory.h  CubesContainer.h  Event.h  Loader.h  ModelView.h  Network.h  ObjectProperties.h  PlayerInfos.h  Renderer.h  Texture.h  Tools.h  UAtlas.h  UChunk.h  UEntity.h  ULight.h  UOptions.h  USection.h  UViewer.h  Viewer.h  Window.h  World.h
uSrc/Includes/GUI/: ButtonGUI.h  GUI.hpp  GuiText.h  History.h  Inventory.h  ObjectType.h  PopupButtonGUI.h  Slider.h  WindowGUI.h  inputTextGUI.h  uScreen.h
uSrc/Includes/pluginEditor/: PluginSocket.h  WebSocketServer.h
uSrc/Includes/protocol/: CMDHandler.h  CMDHandlerIn.h  CMDHandlerOut.h  PkgHandShakeIn.h  PkgSection.h  PkgString.h  UCurl.h  UZipPack.h  protocol.h  varInt.h
uSrc/Sources/: AABBBox.cpp  Cube.cpp  CubeFactory.cpp  CubesContainer.cpp  Event.cpp  Main.cpp  Network.cpp  PlayerInfos.cpp  PluginSocket.cpp  Renderer.cpp  Texture.cpp  UAtlas.cpp  UEntity.cpp  UOptions.cpp  USection.cpp  UViewer.cpp  Viewer.cpp  WebSocketServer.cpp  Window.cpp  World.cpp  light.vert
uSrc/Sources/GUI/: ButtonGUI.cpp  GUI.cpp  GuiText.cpp  History.cpp  InputTextGUI.cpp  Inventory.cpp  PopupButtonGUI.cpp  Slider.cpp  WindowGUI.cpp
uSrc/Sources/PluginEditor/: index.html  main.js  package-lock.json  package.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/: LICENSE  package-lock.json  package.json  pxtarget.json  targetconfig.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/built/: editor.js  fieldeditors.d.ts  sim.d.ts  sim.js  sim.webmanifest  target-strings.json  target.js  target.json  targetlight.json  theme.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/built/web/: blockly.css  rtlblockly.css  rtlsemantic.css  semantic.css
uSrc/Sources/PluginEditor/pxt-plugin-editor/docs/: SUMMARY.md
uSrc/Sources/PluginEditor/pxt-plugin-editor/docs/tutorials/: morpion.md
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/basic/: basic.ts  pxt.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/basic/_locales/: basic-jsdoc-strings.json  basic-strings.json  blocs-jsdoc-strings.json  blocs-strings.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/basic/built/debug/: binary.js
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/blocs/: blocs.ts  enum.ts  pxt.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/blocs/_locales/: blocs-jsdoc-strings.json  blocs-strings.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/blocs/built/debug/: binary.js
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/core/: pxt.json  sims.d.ts
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/core/_locales/: core-jsdoc-strings.json  core-strings.json
uSrc/Sources/PluginEditor/pxt-plugin-editor/libs/core/built/debug/: binary.js
uSrc/Sources/PluginEditor/pxt-plugin-editor/sim/: api.ts  simulator.ts
uSrc/Sources/PluginEditor/pxt-plugin-editor/sim/public/: require.js  simulator.html
uSrc/Sources/PluginEditor/pxt-plugin-editor/theme/site/globals/: site.variables
uSrc/Sources/protocol/: CMDHandlerIn.cpp  CMDHandlerOut.cpp  PkgHandShakeIn.cpp  PkgString.cpp  UCurl.cpp  UZipPack.cpp
